--- a/src/views/Admin/Admin.css
+++ b/src/views/Admin/Admin.css
@@ -1,11 +1,9 @@
 .admin-panel-container {
     width: 100%;
-    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: start;
-    overflow: hidden;
     gap: 16px;
 }
 
@@ -139,7 +137,6 @@
     display: flex;
     flex-direction: column;
     gap: 12px;
-    overflow-y: auto;
     border: 1px solid var(--sayso-border);
     border-radius: 12px;
     padding: 24px;
